--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,18 +1,22 @@
 @import "./base.css";
 
 body {
-  @apply bg-neutral-950 text-neutral-200;
+  @apply bg-neutral-950;
 }
 
 .base {
   @apply flex flex-col items-center;
 }
 
+.hoverV2 {
+  @apply text-green-500 hover:bg-green-500 hover:text-black;
+}
+
 /* transitions */
 
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity 0.6s;
+  transition: opacity 0.3s;
 }
 .fade-enter-from,
 .fade-leave-to{
